# isadsl

./: .gitattributes  .gitignore  COMMIT_MESSAGE.txt  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml  publish-vscode-extension.yml
docs/: Assembler.md  BUNDLING.md  DSL_Specification.md  Disassembler.md  EXAMPLES.md  INDEX.md  LANGIUM_SETUP.md  LANGUAGE_SERVER.md  README.md  SIMD_SUPPORT.md  Simulator.md  TESTING.md  USAGE.md  documentation_generation.md
examples/: README.md  advanced.isa  arm_cortex_a9.isa  arm_cortex_a9_formats.isa  arm_cortex_a9_instructions.isa  arm_cortex_a9_registers.isa  arm_subset.isa  bitfield_example.isa  bundling.isa  comprehensive.isa  format_constants_example.isa  sample_isa.isa  simd.isa  simple_test.isa  variable_length.isa
isa_dsl/: __init__.py  cli.py
isa_dsl/generators/: __init__.py  assembler.py  disassembler.py  documentation.py  simulator.py
isa_dsl/grammar/: isa.tx
isa_dsl/model/: __init__.py  assembly_syntax_processor.py  comment_processor.py  exceptions.py  include_processor.py  isa_model.py  isa_parser.py  model_merger.py  parser.py  scope_provider.py  textx_model_converter.py  validator.py
isa_dsl/runtime/: __init__.py  rtl_interpreter.py
tests/: __init__.py  test_arm_integration.py  test_assembly_syntax.py  test_assembly_syntax_braces.py  test_bundle_assembly_syntax.py  test_bundling.py  test_comprehensive_features.py  test_generated_tools.py  test_generators.py  test_integration.py  test_parser.py  test_rtl_interpreter.py  test_validator.py  test_variable_length_assembler.py  test_variable_length_comprehensive.py  test_variable_length_disassembler.py  test_variable_length_execution.py
tests/aliases/: __init__.py  test_aliases.py
tests/arm/: __init__.py  conftest.py  test_arm_basic.py  test_arm_disassembler.py  test_arm_end_to_end.py  (+11 more)
(+106 files in other folders)
